--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="form">
         <header>Login</header>
-         <form action="./Template1.html" method="post" >
+         <form action="./Template1.html" method="get" >
         <input type="email" name="email" placeholder="Email">
         <Br></Br>
         <input type="password" name="password" placeholder="Password">
