--- a/Template1.html
+++ b/Template1.html
@@ -37,6 +37,7 @@ wght@700&family=Work+Sans:ital,wght@0,200;0,300;0,5
     </div>
     <div class="landing">
         <div class="intro-text">
+            <h1>Mahmoud Amr</h1>
             <h1>Hello There</h1>
             <p>We Are Leon - Super Creative & Minimal Agency Web Template</p>
         </div>
